# Derzhavets_bot

./: .env.example  README.md  cel_costil.py  database.py  dump.file.py  keyboards.py  main.py  messages.py  models.py  orm.py  pyproject.toml  states.py  tasks.py
djangofeeds/: models.py
docs/: choice_schema.drawio
