[tool.poetry]
name = "derzhavets_bot"
version = "0.1.0"
description = ""
authors = ["Mykola Solodukha <mykola.soloduha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.4"
aiogram = "^2.11.2"
tortoise-orm = "^0.16.21"
aerich = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
